add nav link css

--- a/app/templates/home.handlebars
+++ b/app/templates/home.handlebars
@@ -23,9 +23,9 @@
                         Dropdown link
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item nav-link" href="#">Action</a>
+                        <a class="dropdown-item nav-link" href="#">Another action</a>
+                        <a class="dropdown-item nav-link" href="#">Something else here</a>
                     </div>
             </ul>
             <form class="search form-inline my-2 my-lg-0">
