--- a/main.css
+++ b/main.css
@@ -788,7 +788,7 @@
     color: #dcc08e; }
 
 .navbar-default .navbar-nav .nav-link {
-  color: white; }
+  color: #ffffff; }
   .navbar-default .navbar-nav .nav-link:focus, .navbar-default .navbar-nav .nav-link:hover {
     color: rgba(220, 192, 142, 0.75); }
   .navbar-default .navbar-nav .nav-link.disabled {
@@ -796,7 +796,9 @@
 
 .navbar-default .navbar-nav .show > .nav-link,
 .navbar-default .navbar-nav .active > .nav-link,
-.navbar-default .navbar-nav .nav-link.show,
+.navbar-default .navbar-nav .nav-link.show {
+  color: #ffffff; }
+
 .navbar-default .navbar-nav .nav-link.active {
   color: #dcc08e; }
 
@@ -1939,7 +1941,8 @@
 
 body {
   background-color: #2c2c2c;
-  font-family: LeagueGothicRegular; }
+  font-family: LeagueGothicRegular;
+  color: #dcc08e; }
 
 .navbar {
   padding-left: 75px;
@@ -2128,9 +2131,8 @@ tbody.collapse.show {
   background: none;
   border: 0; }
   .dropdown-item:focus, .dropdown-item:hover {
-    color: #9fa8b2;
-    text-decoration: none;
-    background-color: #adb5bd; }
+    color: #dcc08e;
+    text-decoration: none; }
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
@@ -2473,7 +2475,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #adb5bd;
+  color: #dcc08e;
   text-align: left;
   background-color: #2c2c2c; }
 
