--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -60,7 +60,7 @@ body {
   font-size: $font-size-base;
   font-weight: $font-weight-base;
   line-height: $line-height-base;
-  color: $body-color;
+  color: $main-color;
   text-align: left; // 3
   background-color: $body-bg; // 2
 }
