moved from systemjs to webpack

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -4,6 +4,8 @@
     font-weight: normal;
 }
 
+$background-image: url('../images/logo.png');
+
 body {
     background-color: $body-bg;
     font-family: LeagueGothicRegular;
