--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -83,9 +83,8 @@ $dropdown-border-color : rgba(#000, .15) !default;
 $dropdown-border-width : $border-width !default;
 $dropdown-divider-bg : $gray !default;
 $dropdown-box-shadow : 0 .5rem 1rem rgba(#000, .175) !default;
-$dropdown-link-color : $gray !default;
+$dropdown-link-color : $white !default;
 $dropdown-link-hover-color : $main-color !default;
-$dropdown-link-hover-bg : $gray !default;
 $dropdown-link-active-color : $component-active-color !default;
 $dropdown-link-active-bg : $component-active-bg !default;
 $dropdown-link-disabled-color : $gray !default;
