minor changes in dev,build and deploy

--- a/src/js/app/templates/home.handlebars
+++ b/src/js/app/templates/home.handlebars
@@ -49,7 +49,7 @@
                 </div>
                 <span class="month">SEP</span>
                 <span class="day">13</span>
-                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <img src="https://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
@@ -68,7 +68,7 @@
                 </div>
                 <span class="month">AUG</span>
                 <span class="day">28</span>
-                <img src="http://lorempixel.com/480/180/" alt="post image">
+                <img src="https://lorempixel.com/480/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
@@ -88,7 +88,7 @@
                 </div>
                 <span class="month">AUG</span>
                 <span class="day">22</span>
-                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <img src="https://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
@@ -107,7 +107,7 @@
                 </div>
                 <span class="month">OCT</span>
                 <span class="day">13</span>
-                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <img src="https://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
@@ -126,7 +126,7 @@
                 </div>
                 <span class="month">AUG</span>
                 <span class="day">13</span>
-                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <img src="https://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
@@ -145,7 +145,7 @@
                 </div>
                 <span class="month">SEP</span>
                 <span class="day">13</span>
-                <img src="http://lorempixel.com/222/180/" alt="post image">
+                <img src="https://lorempixel.com/222/180/" alt="post image">
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
