removed botstrap scss files

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -140,3 +140,12 @@ main {
 
     }
 }
+@media (max-width: 576px) {
+    .post{
+        .img{
+            width: 80vw;
+            height: auto;
+        }
+    }
+
+}
