added hb partials and post model

--- a/src/js/app/templates/home.handlebars
+++ b/src/js/app/templates/home.handlebars
@@ -36,10 +36,10 @@
 </header>
 
 <main>
-    <div class="container post-container">
-        <!-- Example row of columns -->
+    <div class="container-fluid post-container">
         <div class="row">
-            <article class="col post">
+            {{> post }}
+            <article class="col-xs-2 card post">
                 <div class="post-category">
                     <ul>
                         <li>
@@ -58,7 +58,7 @@
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </article>
-            <div class="col post">
+            <div class="col-xs-2 card post">
                 <div class="post-category">
                     <ul>
                         <li>
@@ -78,7 +78,7 @@
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
             </div>
-            <div class="col post">
+            <div class="col-xs-2 card post">
                 <div class="post-category">
                     <ul>
                         <li>
@@ -97,7 +97,7 @@
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
-            <div class="col post">
+            <div class="col-xs-2  card post">
                 <div class="post-category">
                     <ul>
                         <li>
@@ -116,7 +116,7 @@
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
-            <div class="col post">
+            <div class="col-xs-2 card post">
                 <div class="post-category">
                     <ul>
                         <li>
@@ -135,7 +135,7 @@
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
-            <div class="col post">
+            <div class="col-xs-2 card post">
                 <div class="post-category">
                     <ul>
                         <li>
