--- a/src/js/app/templates/test.handlebars
+++ b/src/js/app/templates/test.handlebars
@@ -1,3 +1,36 @@
-<h1>
-    test
-</h1>
+<div class="container">
+    <form>
+        <div class="form-group">
+            <label for="postTitle">Title</label>
+            <input type="text" class="form-control" id="postTitle" aria-describedby="emailHelp" placeholder="Enter post title">
+        </div>
+        <div class="form-group">
+            <label for="postAuthor">Author</label>
+            <input type="text" class="form-control" id="postAuthor" placeholder="Author">
+        </div>
+        <div class="form-group">
+            <label for="postCategory">Category</label>
+            <select class="form-control" id="postCategory">
+                {{#each categories}}
+                <option>{{this}}</option>
+                {{/each}}
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="addCategory">Category to add</label>
+            <input type="text" class="form-control" id="addCategory" placeholder="Category">
+            <button type="button" id="addCategoryBtn" class="btn btn-primary mt-2">Add Category</button>
+        </div>
+        <div class="form-group">
+            <label for="postCongtent">Content</label>
+            <textarea class="form-control" id="postCongtent" rows="4"></textarea>
+        </div>
+        {{!-- <div class="form-group">
+            <label for="exampleInputFile">File input</label>
+            <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+            <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a
+                new line.</small>
+        </div> --}}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
