working on post controller

--- a/src/js/app/templates/test.handlebars
+++ b/src/js/app/templates/test.handlebars
@@ -31,6 +31,6 @@
             <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a
                 new line.</small>
         </div> --}}
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="submitPost" type="button" class="btn btn-primary">Submit</button>
     </form>
 </div>
