--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,7 @@ $body-bg: #2c2c2c !default;
 $body-color : $gray !default;
 $main-color: #dcc08e !default;
 $main-link-color: $white;
+$link-color: #686767;
 $text-muted: $gray !default;
 $background: $main-color !default;
 
