--- a/src/js/app/templates/home.handlebars
+++ b/src/js/app/templates/home.handlebars
@@ -121,37 +121,52 @@
             </div>
         </div>
     </div>
-<div class="pagination">
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
-    <span>5</span>
-</div>
 </main>
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
+</div>
 
 <footer>
     <div class="row">
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <h2>test1</h2>
             <div>inner 1.1</div>
             <div>inner 1.2</div>
             <div>inner 1.3</div>
             <div>inner 1.4</div>
         </div>
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <h2>test2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam necessitatibus at, accusantium voluptatum reiciendis
                 iusto officia eaque! Corporis eligendi nemo voluptas harum blanditiis, molestiae voluptatibus rerum consequuntur
                 fugiat inventore asperiores.</p>
         </div>
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <h2>test3</h2>
             <div>inner 3.1</div>
             <div>inner 3.2</div>
             <div>inner3.3</div>
         </div>
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <h2>test4</h2>
             <div>inner 4.1</div>
             <div>inner 4.2</div>
