fixed pagination design

--- a/src/js/app/templates/home.handlebars
+++ b/src/js/app/templates/home.handlebars
@@ -123,8 +123,8 @@
     </div>
 </main>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination">
+<nav class="pagination">
+  <ul>
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
