--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -149,9 +149,9 @@ input.search {
     color: $white;
     font-family: LeagueGothicRegular;
     letter-spacing: 0.5rem;
-    line-height: 3rem;
     padding: 4rem 0 3rem;
-    text-align: center;
+    font-size: 4rem;
+    display: block;
     a {
         color: $white;
     }
@@ -159,25 +159,24 @@ input.search {
         color: $main-color;
     }
     ul {
-        font-size: 5rem;
         position: relative;
+        text-align: center;
     }
     ul > li:first-child {
-        font-size: 5rem;
         position: absolute;
         left: 0;
-        top: -0.7rem;
+        top: -0.5rem;
     }
     ul > li:last-child {
-        font-size: 5rem;
         position: absolute;
         right: 0;
-        top: -0.7rem;
+        top: -0.5rem;
     }
     .page-link {
-        border: none !important;
-        background: none !important;
-        font-size: 5rem;
-        position: relative;
+        border: none;
+        background: none;
+    }
+    li.page-item{
+        display: inline-flex;
     }
 }
