design fixes  + nav partial

--- a/src/js/app/templates/home.handlebars
+++ b/src/js/app/templates/home.handlebars
@@ -142,36 +142,6 @@
     </li>
   </ul>
 </nav>
-
 </div>
 
-<footer>
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <h2>test1</h2>
-            <div>inner 1.1</div>
-            <div>inner 1.2</div>
-            <div>inner 1.3</div>
-            <div>inner 1.4</div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <h2>test2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam necessitatibus at, accusantium voluptatum reiciendis
-                iusto officia eaque! Corporis eligendi nemo voluptas harum blanditiis, molestiae voluptatibus rerum consequuntur
-                fugiat inventore asperiores.</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <h2>test3</h2>
-            <div>inner 3.1</div>
-            <div>inner 3.2</div>
-            <div>inner3.3</div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <h2>test4</h2>
-            <div>inner 4.1</div>
-            <div>inner 4.2</div>
-            <div>inner 4.3</div>
-
-        </div>
-    </div>
-</footer>
+{{> footer }}
