--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,6 +9,16 @@ $link-color: #686767;
 $text-muted: $gray !default;
 $background: $main-color !default;
 
+@import url('https://fonts.googleapis.com/css?family=Droid+Sans');
+@font-face {
+  font-family: "LeagueGothicRegular";
+  src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
+  font-weight: normal;
+}
+
+$main-font: "Droid Sans", sans-serif;
+$secondary-font: "LeagueGothicRegular";
+
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
