--- a/src/js/app/templates/home.handlebars
+++ b/src/js/app/templates/home.handlebars
@@ -18,8 +18,7 @@
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
-                <p class="author">posted by nick roach</p>
-                <div class="border"></div>
+                <span class="author">posted by nick roach</span>
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </article>
@@ -37,8 +36,7 @@
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
-                <p class="author">posted by nick roach</p>
-                <div class="border"></div>
+                <span class="author">posted by nick roach</span>
                 <p class="post-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
                     Donec sed odio dui. </p>
@@ -57,8 +55,7 @@
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
-                <p class="author">posted by nick roach</p>
-                <div class="border"></div>
+                <span class="author">posted by nick roach</span>
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
@@ -76,8 +73,7 @@
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
-                <p class="author">posted by nick roach</p>
-                <div class="border"></div>
+                <span class="author">posted by nick roach</span>
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
@@ -95,8 +91,7 @@
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
-                <p class="author">posted by nick roach</p>
-                <div class="border"></div>
+                <span class="author">posted by nick roach</span>
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
@@ -114,8 +109,7 @@
                 <h2>
                     <a href="#/post-title">Post Title Goes Here</a>
                 </h2>
-                <p class="author">posted by nick roach</p>
-                <div class="border"></div>
+                <span class="author">posted by nick roach</span>
                 <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas
                     posuere lorem.</p>
             </div>
