--- a/src/js/app/templates/partials/post.handlebars
+++ b/src/js/app/templates/partials/post.handlebars
@@ -12,8 +12,7 @@
     <h2>
         <a href="#/post-title">This is from partial</a>
     </h2>
-    <p class="author">posted by nick roach</p>
-    <div class="border"></div>
+    <span class="author">posted by nick roach</span>
     <p class="post-text">Fusce suscipit sapien sit amet sapien placerat ultrices. Vivamus sed massa ac metus gravida dignissim egestas posuere
         lorem.</p>
 </article>
