--- a/src/js/app/templates/postPage.handlebars
+++ b/src/js/app/templates/postPage.handlebars
@@ -11,9 +11,12 @@
     <div class="col-sm-12 col-lg-3 card">
       <img src="{{post.imageUrl}}" alt="Post image">
     </div>
-        <div class="col-sm-12 col-lg-9 card">
-          <h1>{{post.title}}</h1>
-          <span class="author">posted by {{post.author}} IN {{post.category}} | 0 COMMENTS</span>
+    <div class="col-sm-12 col-lg-9 card">
+      <h1>{{post.title}}</h1>
+      <span class="author">posted by {{post.author}} IN {{post.category}} | 0 COMMENTS</span>
+      <p class="content">
+        {{post.content}}
+      </p>
     </div>
   </div>
 </article>
