added post tags

--- a/src/js/app/templates/postPage.handlebars
+++ b/src/js/app/templates/postPage.handlebars
@@ -10,6 +10,13 @@
   <div class="row">
     <div class="col-sm-12 col-lg-3 card">
       <img src="{{post.imageUrl}}" alt="Post image">
+      <div class="tags">
+        <h4>Tags</h4>
+        <span>Business</span>
+        <span>Banks</span>
+        <span>UK</span>
+        <span>USA</span>
+      </div>
     </div>
     <div class="col-sm-12 col-lg-9 card">
       <h1>{{post.title}}</h1>
