--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -185,6 +185,24 @@ input.search {
             font-family: $main-font;
             color: #837e7e;
         }
+        .tags{
+            margin-top: 0.5rem;
+            font-family: $secondary-font;
+            h4 {
+                text-transform: uppercase;
+                padding-top: 0.7rem;
+                color: #212121;
+            }
+            span {
+                text-transform: uppercase;
+                color: #6e6e6e;
+                display: inline-block;
+                text-shadow: 1px 1px $white;
+                background-color: #efefef;
+                padding: 0.5rem;
+                margin: 0.1rem;
+            }
+        }
     }
 }
 
